# DiscordToLLM

./: .env.example  .gitignore  README.md  clean_data.py  pyproject.toml  requirements.txt
models/gemma3_12b/: README.md  discord_gemma3_12b_bot.py  export_gemma3_12b_gguf.py  export_gguf.sh  run_discord_bot.sh  train.sh  train_gemma3_12b.py
models/llama31/: README.md  discord_llama31_bot.py  export_gguf.sh  export_llama31_gguf.py  run_discord_bot.sh  train.sh  train_llama31_8b.py
models/trinity/: README.md  discord_trinity_bot.py  export_gguf.sh  export_trinity_gguf.py  run_discord_bot.sh  train.sh  train_trinity_nano.py
requirements/: bot.txt  dev.txt  train.txt
scripts/: install_llamacpp.sh
